# port-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ports.py  ports.spec  pyproject.toml
.github/workflows/: ci.yml
docs/: GITHUB_PUBLISH.md
src/port_manager/: __init__.py  _port_owner.py  cli.py  core.py
tests/: test_core.py  test_e2e.py  test_registry.py  test_scanner.py
