[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ports-registry"
version = "0.1.0"
description = "Local port bookkeeping for Windows + WSL developers — track which projects own which ports, cross-referenced against live listeners."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Kyle Farkus", email = "kyle@farkusdynamics.co.za" },
]
keywords = [
    "ports",
    "networking",
    "windows",
    "wsl",
    "developer-tools",
    "cli",
    "registry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/farkusza/ports-registry"
Issues = "https://github.com/farkusza/ports-registry/issues"
Changelog = "https://github.com/farkusza/ports-registry/blob/main/CHANGELOG.md"

[project.scripts]
ports = "ports:main"

[tool.setuptools]
py-modules = ["ports"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"