[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "port-manager"
version = "0.1.0"
description = "Zero-dep dev port allocator with live scan, health probes, and HTTP status server. CLI + library."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Kyle Farkus", email = "kyle@farkusdynamics.co.za" },
]
keywords = [
    "port",
    "allocator",
    "scan",
    "networking",
    "developer-tools",
    "cli",
    "devops",
    "windows",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
# port-manager is zero-dep at the core. `rich` is optional — falls back to
# plain text if not installed.
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/farkusza/port-manager"
Issues = "https://github.com/farkusza/port-manager/issues"
Changelog = "https://github.com/farkusza/port-manager/blob/main/CHANGELOG.md"

[project.scripts]
port-manager = "port_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"